--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -213,10 +213,10 @@ height:auto;
             <p>Wishing you the happiest birthday ever! May all your dreams come true🥳💗.Mara 19 years ke achievement,Remember your special and you deserve all the good , but they might be some potholes along your journey but i know you ,you are strong you'll get through them. I'm proud of you. 🫶</p>
 
             <p> I am greatful to have a friend like you la o hlopha🤧,It's been a long time since 
-we talked i mean we do talk almost everyday but we haven't talked, you know what i mean you always know 😉😅.I'll double check my english to make sure there no erros😂🤦‍♂️,I'm grateful for every moment we ever had ,and sorry for over doing some stuff kea tseba le nna ka hlopha</p>
+we talked i mean we do talk almost everyday but we haven't talked, you know what i mean you always know 😉😅.I'll double check my english to make sure there no erros😂🤦‍♂️,I'm grateful for every moment we ever had ,and sorry for over doing some stuff kea tseba le nna ka hlopha. </p>
 
             <p>I'm proud of the woman you became ,you have grown and matured but still your crazy💯, weird💯 and smart🤓 too .I pray you get the happiness you deserve, i don't have much to offer this birthday like
-last year but i wish you the best this year and aĺl others to come😁,it's not much but i used your fav colors ande ke proud hope you like this😂.- yours problematicly Dulas🤓</p>
+last year but i wish you the best this year and aĺl others to come😁,it's not much but i used your fav colors ande ke proud hope you like this😂.- yours problematicly Tshepo🤓</p>
         </div>
 
        
