--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-I<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@ I<!DOCTYPE html>
 <meta property="og:title" content="Happy Birthday Nana!">
 <meta property="og:description" content="A birthday webpage for Zanele Radebe, featuring personalized messages, voice notes, and videos.">
 <meta property="og:image" content="2.jpg">
-<meta property="og:url" content="dulas-17.github.io/Nana/">
+<meta property="og:url" content="dulas-17.github.io/April/">
 
     <style>
         body {
