--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ height:auto;
 we talked i mean we do talk almost everyday but we haven't talked, you know what i mean you always know 😉😅.I'll double check my english to make sure there no erros😂🤦‍♂️,I'm grateful for every moment we ever had ,and sorry for over doing some stuff kea tseba le nna ka hlopha. </p>
 
             <p>I'm proud of the woman you became ,you have grown and matured but still your crazy💯, weird💯 and smart🤓 too .I pray you get the happiness you deserve, i don't have much to offer this birthday like
-last year but i wish you the best this year and aĺl others to come😁,it's not much but i used your fav colors ande ke proud hope you like this😂.- yours problematicly Tshepo🤓</p>
+last year but i wish you the best this year and aĺl others to come😁,it's not much but i used your fav colors ande ke proud hope you like this😂.- yours problematicly De One🤓</p>
         </div>
 
        
