--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ height:auto;
 
         <div class="section">
             <h2>💌 Birthday Message</h2>
-            <p>Wishing you the happiest birthday ever! May all your dreams come true🥳💗.Mara 19 years ke achievement,Remember your special and you deserve all the good , but they might be some potholes along your journey but i know you ,you are strong you'll get through them. I'm proud of you. 🫶</p>
+            <p>Wishing you the happiest birthday ever! May all your dreams come true🥳💗.Mara 19 years ke achievement,Remember your special and you deserve all the good , but there might be some potholes along your journey but i know you ,you are strong you'll get through them. I'm proud of you. 🫶</p>
 
             <p> I am greatful to have a friend like you la o hlopha🤧,It's been a long time since 
 we talked i mean we do talk almost everyday but we haven't talked, you know what i mean you always know 😉😅.I'll double check my english to make sure there no erros😂🤦‍♂️,I'm grateful for every moment we ever had ,and sorry for over doing some stuff kea tseba le nna ka hlopha. </p>
