--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- Birthday Messages Section -->
 
 <!-My Birthday is on the 17th of August, forget it again I'll kill you->
+<!-I honestly liked making this Gift for you and I knew you would love it,->
 
         <div class="section">
             <h2>💌 Birthday Message</h2>
